test_src/compiler_errors/types/arithmetic/ModFloatError2.b
class ModFloatError2 {
    void test() {
        println(1 % 2.0f);
    }
}
